# vgo-rust

./: .dockerignore  .editorconfig  .gitignore  CONTEXT_API_UPDATE.md  Cargo.toml  DEPENDENCY_UNIFICATION.md  DEPENDENCY_UNIFICATION_COMPLETE.md  EVENTS_PROTO_MIGRATION.md  EVENT_HANDLER_MIGRATION.md  EVENT_HANDLER_OPTIMIZATION_README.md  FINAL_SUMMARY.md  FIX_SUMMARY.md  GITHUB_ACTIONS_FILES.md  GITHUB_ACTIONS_SETUP.md  LAUNCH_JSON_GUIDE.md  MIGRATION_COMPLETE.md  MONOREPO_STRUCTURE.md  OPENAPI_EXAMPLE.md  PATH_EXPANSION_FIX.md  PDK_DISPATCH_COMPLETE.md  PDK_REDESIGN.md  PLUGINS_BUILD_FIX.md  PLUGIN_AUTH_INTEGRATION.md  PLUGIN_CAPABILITIES_REQUIRED.md  PLUGIN_CLIENT_UPDATE.md  PLUGIN_DEBUG_CONFIG.md  PLUGIN_DEBUG_MODE.md  PLUGIN_DEV_MODE.md  PLUGIN_EXAMPLE_COMPLETE.md  PLUGIN_IMPLEMENTATION_COMPLETE.md  PLUGIN_MESSAGE_FLOW.md  PLUGIN_MIGRATION_GUIDE.md  PLUGIN_RUNTIME_FLOW.md  PLUGIN_TEST_GUIDE.md  PLUGIN_USAGE_EXAMPLE.md  PROTOBUF_COMPLETE.md  PROTOBUF_FULL_REFACTOR.md  PROTOBUF_MIGRATION.md  PROTOBUF_ONLY.md  PROTOCOL_CODEC_REMOVAL_COMPLETE.md  (+14 more)
examples/: Cargo.toml  PLUGIN_EXAMPLES.md  config.md  config_example.rs  docker-compose.yaml  performance_monitoring.rs  plugin_ai_example.rs  plugin_filter_example.rs  plugin_protobuf_example.rs  plugin_storage_simple_example.rs
examples/db/: README.md
examples/db/mysql/: main.rs
examples/db/postgresql/: main.rs  model.rs  repo.rs
examples/db/sqlite/: main.rs
examples/im/: http.html  quic.html  ws.html
v/: Cargo.toml  build.rs
v-admin/: Cargo.toml  build.rs
v-admin/config/: default.toml  development.toml  production.toml
v-admin/src/: lib.rs
v-admin/src/cmd/: server.rs
v-auth-center/: Cargo.toml  README.md  build.rs
v-auth-center/cmd/: server.rs
v-auth-center/config/: default.toml
v-auth-center/src/: errors.rs  lib.rs  main.rs
v-auth-center/src/api/test/: login.rs
v-auth-center/src/api/v1/: login.rs  login_out.rs  test.rs
v-auth-center/src/cmd/: server.rs
v-auth-center/src/config/: mod.rs  sa_token_conf.rs
v-auth-center/src/controller/app/: oauth2.rs  test.rs
v-auth-center/src/controller/test/: login.rs
v-auth-center/src/controller/v1/: test.rs
v-auth-center/src/event/: mod.rs  my_listener.rs
v-auth-center/src/model/: demo.rs  demo2.rs  mod.rs  oauth2_app.rs  user.rs
v-auth-center/src/repo/: mod.rs  oauth2_app_repo.rs  user_repo.rs
v-auth-center/src/service/: base_service.rs  mod.rs  oauth2_service.rs  sso_service.rs  user_service.rs
v-connect-im/: CLEANUP_SUMMARY.md  Cargo.toml  Dockerfile  PROTO_DIRECTORY_EXPLANATION.md  QUIC_TEST.md  README.md  build.rs
v-connect-im-plugin-example/: Cargo.toml  README.md  USAGE.md  wk.plugin.example-darwin-arm64.vp  wk.plugin.example-darwin-arm64.wkp
v-connect-im-plugin-example/scripts/: package.sh
v-connect-im-plugin-example/src/: main.rs
v-connect-im/certs/: server.crt  server.key
v-connect-im/config/: default.toml  node-a.toml  node-b.toml
v-connect-im/data/v-connect-im-node-local/: db  snap.0000000000001807  snap.0000000000001C99  snap.000000000001B6B2
v-connect-im/docs/: AUTHENTICATION.md  code_quality.md  event_handler_optimization.md  event_handler_usage.md  plugin_communication_test_guide.md  plugin_inter_communication.md  plugin_test.md  structure.md  warnings.md
v-connect-im/examples/: event_handler_comparison.rs  plugin_communication_demo.rs  quic_client.rs  storage_plugin_example.rs  udp_weak_proxy.rs
v-connect-im/plugins/: demo_plugin.py
v-connect-im/plugins/example/: ._example  ._plugin.json  example  plugin.json
v-connect-im/proto/: plugin.proto
v-connect-im/scripts/: build-with-plugin.sh  generate_certs.sh  run-node-a.sh  run-node-b.sh  test_plugin_communication.sh
v-connect-im/src/: config.rs  error.rs  main.rs  router.rs
v-connect-im/src/api/: openapi.rs  plugins.rs
v-connect-im/src/cluster/: broker.rs  directory.rs  mod.rs  raft.rs  raft_async.rs  router.rs
v-connect-im/src/domain/: message.rs
v-connect-im/src/net/: quic.rs
v-connect-im/src/plugins/: auth.rs  bridge.rs  event_bus.rs  event_handler.rs  installer.rs  mod.rs  protocol_handler.rs  runtime.rs  sensitive.rs  test.rs  trace.rs  v_adapters.rs
v-connect-im/src/proto/: pluginproto.rs  vconnectim.plugin.rs
v-connect-im/src/server/: mod.rs
v-connect-im/src/service/: auth.rs  delivery.rs  health.rs  mod.rs  offline.rs  webhook.rs
v-connect-im/src/storage/: mod.rs  traits.rs
v-connect-im/src/storage.backup/: mod.rs
v-connect-im/src/tasks/: heartbeat.rs  mod.rs
v-connect-im/src/ws/: connection.rs  handler.rs  mod.rs  sender.rs  server.rs
v-connect-im/tests/: plugin_inter_communication_test.rs
v-macros/: Cargo.toml  README.md
v-macros/src/: lib.rs
v-macros/tests/: trybuild.rs
v-macros/tests/ui/: pass_base_model.rs  pass_model.rs
v-plugins-hub/: Cargo.toml  HOW_TO_USE_PROTOBUF.md  PROTOBUF_SUPPORT.md
v-plugins-hub/v-connect-im-plugin-auth-satoken/: Cargo.toml  README.md  plugin.json
v-plugins-hub/v-connect-im-plugin-auth-satoken/src/: main.rs  satoken_listener.rs
v-plugins-hub/v-connect-im-plugin-gateway/: Cargo.toml  README.md  plugin.json
v-plugins-hub/v-connect-im-plugin-gateway/src/: config.rs  main.rs
v-plugins-hub/v-connect-im-plugin-storage-sled/: .gitignore  Cargo.toml  FINAL_OPTIMIZATION.md  MACRO_OPTIMIZATION.md  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  REFACTOR_NOTES.md  plugin.json
v-plugins-hub/v-connect-im-plugin-storage-sled/src/: main.rs  sled_listener.rs
v/benches/: protocol_benchmark.rs
v/proto/: README.md  base.proto
v/proto/auth/: auth.proto
v/proto/gateway/: gateway.proto
v/proto/storage/: storage.proto
v/src/: lib.rs  response.rs
v/src/comm/: config.rs  generator.rs  geo.rs  mod.rs  tracing.rs
v/src/comm/generator/: model.rs  openapi.json  route.rs
v/src/db/: README.md  connection.rs  database.rs  error.rs  mod.rs  model.rs  query.rs
v/src/http/: actix_ext.rs  error.rs  mod.rs  pagination.rs  rate_limit.rs  response.rs
v/src/plugin/: client.rs  installer.rs  mod.rs  pdk.rs  protocol.rs  types.rs
v/src/repo/: mod.rs
(+140 files in other folders)
