[package]
name = "v-admin"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
v = { path = "../v", features = ["web_actix"] }
thiserror = "2"
actix-web = "4"
actix-rt = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
validator = { version = "0.20.0", features = ["derive"] }
# 验证码
captcha-rs = "0.2.11"
[build-dependencies]
v = { path = "../v" }


[[bin]]
name = "server"
path = "src/cmd/server.rs"

[features]
redis = []
web_actix = []
postgres_backend = []
