[package]
name = "v-auth-center"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
v = { path = "../v", features = ["postgres_backend", "web_actix"] }
anyhow = "1"
actix-web = "4"
actix-rt = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2.1"
futures = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.1", default-features = false, features = [
    "r2d2",
    "chrono",
    "postgres",
] }
sa-token-core = "0.1.6"
sa-token-storage-memory = "0.1.6"
sa-token-storage-redis = "0.1.6"
sa-token-plugin-actix-web = "0.1.6"

[features]
postgres_backend = []
mysql_backend = []
sqlite_backend = []
redis = []

[[bin]]
name = "server"
path = "src/cmd/server.rs"

[lib]
name = "v_auth_center"
path = "src/lib.rs"
