[package]
name = "v-auth-center"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
v = { path = "../v", features = ["web_actix"] }
actix-web = "4"
actix-rt = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2.1"
futures = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.20.0", features = ["derive"] }
sa-token-plugin-actix-web = { version = "0.1.11", features = ["redis"] }
thiserror = "2"

[build-dependencies]
v = { path = "../v" }

[features]
redis = []
web_actix = []
postgres_backend = []

[[bin]]
name = "server"
path = "src/cmd/server.rs"

[lib]
name = "v_auth_center"
path = "src/lib.rs"
