[package]
name = "v-connect-im-plugin-example"
version = "0.1.0"
edition = "2021"
description = "Example plugin for v-connect-im"
authors = ["v-connect-im team"]

[workspace]

[[bin]]
name = "example"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }
chrono = "0.4"
v = { path = "../v" }
