[package]
name = "v"
version = "0.1.0"
edition = "2021"


[features]
default = ["config", "web_actix", "protobuf"]
config = ["dep:config", "dep:lazy_static", "dep:serde", "dep:serde_json"]
web_actix = ["dep:actix-web"]
# 插件协议：仅支持 Protobuf / Plugin protocol: Protobuf only
protobuf = ["dep:prost", "dep:prost-types"]

[dependencies]
# 以 feature 形式可选启用配置模块所需依赖（通过 dep: 前缀引用）
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", default-features = false, features = [
    "runtime-tokio-native-tls",
    "postgres",
    "chrono",
] }
thiserror = "2"
config = { version = "0.15.18", optional = true }
lazy_static = { version = "1.4", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2"
async-trait = "0.1"
syn = { version = "2", features = ["full"] }
quote = "1"
sha1 = "0.10"
actix-web = { version = "4", optional = true }
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-log = "0.1"
flate2 = "1"
tar = "0.4"
anyhow = "1"
parking_lot = "0.12"
clap = { version = "4.0", features = ["derive"] }
utoipa = { version = "4.0", features = ["actix_extras"] }
# Protobuf 支持 / Protobuf support
prost = { version = "0.13", optional = true }
prost-types = { version = "0.13", optional = true }

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
