[package]
name = "v-connect-im-plugin-storage"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "v-connect-im-plugin-storage"
path = "src/main.rs"

[[bin]]
name = "example"
path = "src/main.rs"

[dependencies]
# v 公共库 / v common library
v = { path = "/Users/mac/workspace/vgo-rust/v" }

# 异步运行时 / Async runtime
tokio = { version = "1.0", features = ["full"] }

# 错误处理 / Error handling
anyhow = "1.0"

# 序列化 / Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 存储后端 / Storage backend
sled = "0.34"
